--- a/gb/1/1/18/n36587.md
+++ b/gb/1/1/18/n36587.md
@@ -9,63 +9,57 @@
 <p>香港新力唱片高O油?P文，在嘄偰中O　杳鞑蝗胧次?S一事挲：“我,f&gt;]有申^罄杳鞯某捌蹭N量，因z槲?f跟黎明?綎，他挲綎不薆?，所以我,f只好尊重他的意思，至于其他歌手比如彭羚、崇巧音同王力宏，我,f也&gt;]^螅策@,??是?算全年出綎的所有唱片，彭羚、王力宏和崇巧音今年出碟&#8221;盗坎欢啵参?f紒得^笠?]意思，&gt;r且我,f的目~艘膊皇沁@,??。”</p>
 <p>男女各薡一,??</p>
 <p>另外，港台腢麝缂膏梁饯璋挲：“明晚O十C追的‘全年最高誏量歌手大?’.　珠_男、女歌手，z槭颤N分男女？稛是我,f和各大唱片公司嶱.　陶&#8221;的磐果，大家都紒得今年市道不好，所以想薡f???，鼓&#8221;罡枋殖煽f。”而.?r薆先的女歌手&#8221;t是?慧琳鹞?秀文，男歌手方面是珴霆鄣和?奕迅之?。</p>
-<hr />
-<p><b><span style="color: red;">相关文章</span></b></p>
+<p><b><span style="color: red">相关文章</span></b></p>
 <ul>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36330" target="_blank" rel="noopener noreferrer">菲戈暗示对英超有兴趣</a> (1/18/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36041" target="_blank" rel="noopener noreferrer">张学友、王菲勇夺杰出男女歌手大奖 </a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35955" target="_blank" rel="noopener noreferrer">内地港台歌手首次大比赛</a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35762" target="_blank" rel="noopener noreferrer">苹果新推出的音乐制作软件iTunes一周下载27.5万次</a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34962" target="_blank" rel="noopener noreferrer">综述：香港年度十大劲歌金曲奖揭晓</a> (1/15/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34720" target="_blank" rel="noopener noreferrer">马友友丝路之旅将在两岸首演谭盾的卧虎藏龙 </a> (1/15/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34537" target="_blank" rel="noopener noreferrer">孙燕姿：新人圈中最抢眼（图文）</a> (1/15/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34531" target="_blank" rel="noopener noreferrer">许茹芸花开不败誓死捍卫天后宝座（图文） </a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34530" target="_blank" rel="noopener noreferrer">林忆莲想和陶?磁龀龌鸹?（图文）</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34518" target="_blank" rel="noopener noreferrer">百老汇音乐剧之夜亮相京城（图文）</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34519" target="_blank" rel="noopener noreferrer">郭富城陈慧琳夺最受欢迎男女歌星</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34473" target="_blank" rel="noopener noreferrer">全球华语音乐榜评选活动揭晓</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34414" target="_blank" rel="noopener noreferrer">华语乐坛新人巡礼：“偶像派”天生丽质难自弃</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34411" target="_blank" rel="noopener noreferrer">孙燕姿：新人圈中最抢眼 </a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34014" target="_blank" rel="noopener noreferrer">古典音乐巨星 照亮黯淡景气</a> (1/13/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=33681" target="_blank" rel="noopener noreferrer">宫泽理惠又自杀一说遭否认</a> (1/12/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=33542" target="_blank" rel="noopener noreferrer">数字钢琴在青岛音乐广场亮相 </a> (1/12/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=33493" target="_blank" rel="noopener noreferrer">MP3.com要求澄清版权定义 </a> (1/12/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36330" target="_blank" rel="noopener noreferrer nofollow">菲戈暗示对英超有兴趣</a> (1/18/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36041" target="_blank" rel="noopener noreferrer nofollow">张学友、王菲勇夺杰出男女歌手大奖 </a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35955" target="_blank" rel="noopener noreferrer nofollow">内地港台歌手首次大比赛</a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35762" target="_blank" rel="noopener noreferrer nofollow">苹果新推出的音乐制作软件iTunes一周下载27.5万次</a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34962" target="_blank" rel="noopener noreferrer nofollow">综述：香港年度十大劲歌金曲奖揭晓</a> (1/15/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34720" target="_blank" rel="noopener noreferrer nofollow">马友友丝路之旅将在两岸首演谭盾的卧虎藏龙 </a> (1/15/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34537" target="_blank" rel="noopener noreferrer nofollow">孙燕姿：新人圈中最抢眼（图文）</a> (1/15/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34531" target="_blank" rel="noopener noreferrer nofollow">许茹芸花开不败誓死捍卫天后宝座（图文） </a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34530" target="_blank" rel="noopener noreferrer nofollow">林忆莲想和陶?磁龀龌鸹?（图文）</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34518" target="_blank" rel="noopener noreferrer nofollow">百老汇音乐剧之夜亮相京城（图文）</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34519" target="_blank" rel="noopener noreferrer nofollow">郭富城陈慧琳夺最受欢迎男女歌星</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34473" target="_blank" rel="noopener noreferrer nofollow">全球华语音乐榜评选活动揭晓</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34414" target="_blank" rel="noopener noreferrer nofollow">华语乐坛新人巡礼：“偶像派”天生丽质难自弃</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34411" target="_blank" rel="noopener noreferrer nofollow">孙燕姿：新人圈中最抢眼 </a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34014" target="_blank" rel="noopener noreferrer nofollow">古典音乐巨星 照亮黯淡景气</a> (1/13/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=33681" target="_blank" rel="noopener noreferrer nofollow">宫泽理惠又自杀一说遭否认</a> (1/12/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=33542" target="_blank" rel="noopener noreferrer nofollow">数字钢琴在青岛音乐广场亮相 </a> (1/12/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=33493" target="_blank" rel="noopener noreferrer nofollow">MP3.com要求澄清版权定义 </a> (1/12/2001)</li>
 </ul>
-<p>&nbsp;</p>
+<p>
+?</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/18/n11329746.md#1" target="_blank">传奇总统里根（10）：一封家书承载使命</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548905.md#1">【唐青看时事】美参院出大招 拟中俄“一锅端”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14549024.md#1">【重播】卢比奥在吉隆坡举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548117.md#1">【未解之谜】语出惊人 算尽风云 民国第一神算传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547473.md#1">神韵要求法庭撤销“毫无根据”的诉讼案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547530.md#1">资不抵债 大陆合资企业广汽菲克宣告破产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547402.md#1">“0元购”外卖爆单 阿里与美团顶风内卷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546820.md#1">陆剧上半年十大最具影响力角色出炉 孙俪称冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546802.md#1">女粉丝带男友看演唱会 鹿晗温暖喊话现场嗨翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547034.md#1">美国114岁女人瑞分享长寿秘诀：吃一种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542664.md#1">心脏与大脑会记下每一个愤怒的时刻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652088.md#1">【直播】众议院民主党领袖杰弗里斯举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/1/18/n36587.htm">黎明要退出歌?担?</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/1/18/n36587.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
