--- a/gb/1/1/8/n31153.md
+++ b/gb/1/1/8/n31153.md
@@ -4,60 +4,61 @@
 <tr><td VALIGN=TOP width="626"><h2 align=center>美劳工部长查维斯提名案可能遭到封杀</h2>
 <h6></h6>
 <hr>
-	<p>【大纪元1月8日讯】 美国总统当选人<ahref=http://www.epochtimes.com/news/epochnews/news/Focus.asp?Focus_ID=702><font color=blue>布什</font></A>提名查维斯出任劳工部长的人事案，可能会因为她曾在家中雇用一名非法外劳一年，而遭到参议院封杀。</p>
+	<p>【大纪元1月8日讯】 美国总统当选人<font color="blue">布什</font>提名查维斯出任劳工部长的人事案，可能会因为她曾在家中雇用一名非法外劳一年，而遭到参议院封杀。</p>
 <p>不过，查维斯女士曾对这项指控提出反驳。她坚称，这名女性外劳并非受她雇用，而是她收容她，并给她一笔钱，让她去帮助需要帮助的人。</p>
 <p>据法新社报导,今年五十三岁的查维斯，是来自新墨西哥州的拉丁裔美国人，在美国政坛一向以捍卫保守派主张知名。雷根总统执政时代，查维斯曾担任美国民权委员会主席。</p>
 <p>共和党籍参议员马侃 (亚历桑那州) ，七日在美国广播公司(ABC) 播出的访谈中，拒绝揣测查维斯的劳工部长提名案，是否会因被指雇用非法外劳，而在参议院确认听证中遭到封杀。</p>
 <p>马侃提及查维斯雇用非法外劳一事时说：“在查明查维斯与这名女性外劳之间的关系之前，我真的不知道我们会怎么做。”</p>
 <p>民主党籍参议院多数党领袖达希尔 (南达科塔州)则告诉美国哥伦比亚广播公司 (CBS) 电视网，他对查<br />维斯的某些看法有些担心。</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<B><FONTCOLOR=red>相关文章</FONT></B><br /> &nbsp;&nbsp;&nbsp;&nbsp; </p>
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=31151 target=_blank class=ltnn>美参议员寻求布什支持政治献金改革方案 </a> (1/8/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=31147 target=_blank class=ltnn>布什内阁名单将面对国会强烈挑战 </a> (1/8/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=31075 target=_blank class=ltnn>英国王子威廉相恋布什侄女劳伦</a> (1/7/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=31041 target=_blank class=ltnn>布什政府将认真研究《中国六四真相》 </a> (1/7/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30981 target=_blank class=ltnn>美国第一夫人就职大典穿红装 </a> (1/7/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30977 target=_blank class=ltnn>阿拉法特：克林顿若没戏将与小布什谈</a> (1/7/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30933 target=_blank class=ltnn>悉尼国际网球赛开拍 小威廉姆斯首轮过关</a> (1/7/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30924 target=_blank class=ltnn>克林顿政府指责布什 动摇消费者和商界信心 </a> (1/7/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30857 target=_blank class=ltnn>布什会晤十九个共和党州长</a> (1/7/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30800 target=_blank class=ltnn>候任国防部长被指有歧视非裔倾向</a> (1/7/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30776 target=_blank class=ltnn>金融时报指台湾寄望于小布什</a> (1/7/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30652 target=_blank class=ltnn>布什否认曾派密使赴京传闻</a> (1/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30651 target=_blank class=ltnn>美国国会正式宣布确认布什当选总统</a> (1/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30647 target=_blank class=ltnn>布什财运佳 就职典礼已筹款五百万</a> (1/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30644 target=_blank class=ltnn>男性垄断国会领导 资深女议员有怨言</a> (1/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30574 target=_blank class=ltnn>布什心忧宝贝双胞胎女儿</a> (1/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30508 target=_blank class=ltnn>布什美中政策面临考验: 人权及军售台湾 </a> (1/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30503 target=_blank class=ltnn>祝贺布什竞选胜利显示台湾的希望</a> (1/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30375 target=_blank class=ltnn>布什班子否认向北京派密使</a> (1/6/2001)&nbsp;&nbsp;&nbsp;&nbsp;
-<li> <A HREF=http://epochtimes.com/news/epochnews/newscontent.asp?ID=30289 target=_blank class=ltnn>到底是谁在掌管美国经济？</a> (1/5/2001)<br />
+<p>????<b><font color="red">相关文章</font></b><br /> ???? </p>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=31151" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美参议员寻求布什支持政治献金改革方案 </a> (1/8/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=31147" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什内阁名单将面对国会强烈挑战 </a> (1/8/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=31075" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">英国王子威廉相恋布什侄女劳伦</a> (1/7/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=31041" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什政府将认真研究《中国六四真相》 </a> (1/7/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30981" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美国第一夫人就职大典穿红装 </a> (1/7/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30977" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">阿拉法特：克林顿若没戏将与小布什谈</a> (1/7/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30933" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">悉尼国际网球赛开拍 小威廉姆斯首轮过关</a> (1/7/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30924" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">克林顿政府指责布什 动摇消费者和商界信心 </a> (1/7/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30857" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什会晤十九个共和党州长</a> (1/7/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30800" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">候任国防部长被指有歧视非裔倾向</a> (1/7/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30776" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">金融时报指台湾寄望于小布什</a> (1/7/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30652" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什否认曾派密使赴京传闻</a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30651" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">美国国会正式宣布确认布什当选总统</a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30647" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什财运佳 就职典礼已筹款五百万</a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30644" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">男性垄断国会领导 资深女议员有怨言</a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30574" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什心忧宝贝双胞胎女儿</a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30508" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什美中政策面临考验: 人权及军售台湾 </a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30503" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">祝贺布什竞选胜利显示台湾的希望</a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30375" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">布什班子否认向北京派密使</a> (1/6/2001)???? </li>
+<li> <ahref="https://epochtimes.com/news/epochnews/newscontent.asp?ID=30289" target="_blank" class="ltnn" rel="nofollow noopener noreferrer">到底是谁在掌管美国经济？</a> (1/5/2001)</li>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/5/n30289.md#1">到底是谁在掌管美国经济？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/6/n30375.md#1">布什班子否认向北京派密使</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/6/n30503.md#1">祝贺布什竞选胜利显示台湾的希望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/6/n30508.md#1">布什美中政策面临考验: 人权及军售台湾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/16/n10398402.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/6/n11704965.md#1" target="_blank">宁静：《花为媒》被中共禁播十五年只为淫乱华夏</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/29/n10261439.md#1" target="_blank">从死神手里夺回来的生命</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533725.md#1">李渊宠妃搅弄风云 李世民无端遭诬陷 忍辱不争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537972.md#1">旅美台湾画家张家玮的岛屿之梦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538781.md#1">【未解之谜】童言童语揭前世秘密 真相令人震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540970.md#1">【马克时空】十二日战争摧毁伊朗核能力 瓦解抵抗轴心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540705.md#1">【重播】众院议长约翰逊在保守派团体晚会演讲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540523.md#1">【时事金扫描】抹黑美军行动 女记者被川普点名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539733.md#1">火星表面惊现巨型“蜘蛛网” 古代水道证据？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539554.md#1">陆剧《长安的荔枝》突撤档 那尔那茜遭封杀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539550.md#1">中共被爆秘密派兵赴俄 专家揭中俄背后算计</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539257.md#1">《捍卫战士3》可能是最终章 独行侠面临生存危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540033.md#1">演员于清斌回应送外卖一事：行业寒冬没有戏拍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539600.md#1">打破婚变传闻 吴奇隆刘诗诗一家三口罕见同框</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540300.md#1">郑欣宜因伤退出《歌手2025》 网友呛节目组</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539794.md#1">丰田销量连三月创新高 美日中市场需求强劲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541283.md#1">为什么我们会爱上不爱我们的人？ 专家解析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539961.md#1">上厕所用再生或竹制卫生纸安全吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536363.md#1">前海豹突击队员讲授如何持之以恒地锻炼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536360.md#1">每日一颗巴西坚果 远离营养补充剂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/1/8/n31153.htm">美劳工部长查维斯提名案可能遭到封杀</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/1/8/n31153.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
